# password-filter

./: .gitignore  Cargo.toml  Makefile  README.md  deno.ts
examples/: build_filter.rs  query_filter.rs
pkg/web/: password_filter.d.ts  password_filter.js  password_filter_bg.wasm  password_filter_bg.wasm.d.ts
src/: lib.rs
tests/: passwords.rs
