[package]
name = "password-filter"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "^0.2", features = ["serde-serialize"] }
bincode = "1.3.3"
console_error_panic_hook = { version = "^0.1" }
sha1_smol = "1.0.0"
xorf = { version = "0.8.0", features = ["serde"] }

[dependencies.getrandom]
version = "^0.2"
features = ["js"]

[dev-dependencies]
wasm-bindgen-test = "^0.3"
dialoguer = "0.9.0"

[patch.crates-io]
wasm-bindgen = { git = "https://github.com/bsvwasm/wasm-bindgen", branch = "universal-ui64-patch" }

[profile.release]
opt-level = 3
lto = true

[profile.test]
opt-level = 3
debug = false